--- a/plugin.xml
+++ b/plugin.xml
@@ -8,9 +8,11 @@
   <repo>https://github.com/sunlu/cordova-plugin-xgpush.git</repo>
   <issue>https://github.com/sunlu/cordova-plugin-xgpush/issues</issue>
    
-  <preference name="ACCESS_ID" />
-  <preference name="ACCESS_KEY" />
-  
+  <preference name="ANDROID_ACCESS_ID" />
+  <preference name="ANDROID_ACCESS_KEY" />
+  <preference name="IOS_ACCESS_ID" />
+  <preference name="IOS_ACCESS_KEY" />
+
   <js-module name="xgpush" src="www/xgpush.js">
     <clobbers target="xgpush" />
   </js-module>
@@ -61,8 +63,8 @@
           <action android:name="$PACKAGE_NAME.PUSH_ACTION" />
         </intent-filter>
       </service>
-      <meta-data android:name="XG_V2_ACCESS_ID" android:value="$ACCESS_ID"></meta-data>
-      <meta-data android:name="XG_V2_ACCESS_KEY" android:value="$ACCESS_KEY"></meta-data>
+      <meta-data android:name="XG_V2_ACCESS_ID" android:value="$ANDROID_ACCESS_ID"></meta-data>
+      <meta-data android:name="XG_V2_ACCESS_KEY" android:value="$ANDROID_ACCESS_KEY"></meta-data>
     </config-file>
     <source-file src="src/android/XGPushPlugin.java" target-dir="src/net/sunlu/xgpush" />
     <source-file src="src/android/XGPushReceiver.java" target-dir="src/net/sunlu/xgpush" />
@@ -89,9 +91,9 @@
     <config-file target="*-Info.plist" parent="XGPushMeta">
       <dict>
         <key>AccessID</key>
-        <integer>$ACCESS_ID</integer>
+        <integer>$IOS_ACCESS_ID</integer>
         <key>AccessKey</key>
-        <string>$ACCESS_KEY</string>
+        <string>$IOS_ACCESS_KEY</string>
       </dict>
     </config-file>
     <!-- Tencent XGPush SDK -->
