--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<plugin xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-plugin-xgpush" version="0.1.0">
+<plugin xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-plugin-xgpush" version="0.1.1">
   <name>cordova-plugin-xgpush</name>
   <description>Tencent XGPush Plugin</description>
   <license>MIT</license>
@@ -32,6 +32,8 @@
       <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
       <uses-permission android:name="android.permission.RESTART_PACKAGES" />
       <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+      <uses-permission android:name="android.permission.BLUETOOTH" />
+      <uses-permission android:name="android.permission.BATTERY_STATS" />
       <uses-permission android:name="android.permission.WRITE_SETTINGS" />
       <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
       <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -46,6 +48,7 @@
         <intent-filter android:priority="0x7fffffff">
           <action android:name="com.tencent.android.tpush.action.SDK" />
           <action android:name="com.tencent.android.tpush.action.INTERNAL_PUSH_MESSAGE" />
+          <action android:name="com.tencent.android.tpush.action.FEEDBACK" />
           <action android:name="android.intent.action.USER_PRESENT" />
           <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
         </intent-filter>
@@ -72,7 +75,7 @@
     <!-- Tencent XGPush SDK  -->
     <source-file src="sdk/android/libs/android-support-v4.jar" target-dir="libs" />
     <source-file src="sdk/android/libs/jg_filter_sdk_1.1.jar" target-dir="libs" />
-    <source-file src="sdk/android/libs/Xg_sdk_v2.42_20160111_1539.jar" target-dir="libs" />
+    <source-file src="sdk/android/libs/Xg_sdk_v2.47_20161026_0936.jar" target-dir="libs" />
     <source-file src="sdk/android/libs/wup-1.0.0.E-SNAPSHOT.jar" target-dir="libs" />
 	
     <source-file src="sdk/android/Other-Platform-SO/armeabi/libtpnsSecurity.so" target-dir="libs/armeabi" />
